# fieldagent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
cli/: analyze.py
core/: deepseek_client.py
deploy/: DEPLOY.md  fieldagent.caddy
docs/: writeup.md
docs/superpowers/plans/: 2026-06-06-fieldagent.md
evals/: __init__.py  cross_model.py  cross_model_prep.py  export_demo.py  harness.py  metrics.py  run_eval.py
evals/benchmark/: SCHEMA.md  fetch_cuad.py  heldout_gold.json  risk_types.json
evals/fixtures/: deepseek_fixtures.json
evals/fixtures/claude_resp/: resp_0_ex_0.json  resp_0_ss.json  resp_1_ex_0.json  resp_1_ss.json  resp_2_ex_0.json  resp_2_ex_1.json  resp_2_ss.json  resp_3_ex_0.json  resp_3_ex_1.json  resp_3_ss.json  resp_4_ex_0.json  resp_4_ex_1.json  resp_4_ss.json  resp_5_ex_0.json  resp_5_ex_1.json  resp_5_ss.json  resp_6_ex_0.json  resp_6_ex_1.json  resp_6_ex_2.json  resp_6_ss.json  resp_7_ex_0.json  resp_7_ex_1.json  resp_7_ss.json
evals/results/: cross_model_claude.json  metrics.json  metrics.md  per_contract.json
fieldagent/: baselines.py  chunker.py  clauses.py  extractor.py  metrics_span.py  pipeline.py  types.py  verifier.py
tests/: test_baselines.py  test_chunker.py  test_clauses.py  test_eval_repro.py  test_extractor.py  test_harness.py  test_metrics.py  test_pipeline.py  test_verifier.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ContractViewer.tsx  FindingsPanel.tsx  ResultsPanel.tsx  (+1 more)
(+2 files in other folders)
